--- a/sublime text-settings.json
+++ b/sublime text-settings.json
@@ -5,7 +5,9 @@
 	"draw_minimap_border": true,
 	"ensure_newline_at_eof_on_save": true,
 	"fade_fold_buttons": false,
-	"font_face": "PragmataPro",
+	//"font_face": "Operator Mono Light",
+	"font_face": "Anonymous Pro",
+	"line_padding_bottom": 1,
 	"font_options":
 	[
 		"gdi"
